PROD-9692 - Fix input overflow when label has long content

--- a/src/js/admin/settings-2.0/styles/scss/screens/_feature_settings.scss
+++ b/src/js/admin/settings-2.0/styles/scss/screens/_feature_settings.scss
@@ -326,10 +326,6 @@
             align-items: center;
             flex-wrap: wrap;
 
-            .bb-admin-settings-form__field-input-wrapper {
-                flex-shrink: 0;
-            }
-
             .bb-admin-settings-form__field-description {
                 color: $bb-text-color;
                 font-size: 14px;
